fix: Skills content align fixed

--- a/src/pages/Skills/Skills.module.scss
+++ b/src/pages/Skills/Skills.module.scss
@@ -1,4 +1,5 @@
 .skills {
+    // min-height: calc(100vh - 100px);
     min-height: 100vh;
     width: 100vw;
     max-width: 100%;
@@ -7,6 +8,7 @@
 
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .footer {
@@ -18,10 +20,9 @@
 .content {
     max-width: 1280px;
     padding: {
-        top: 100px;
         left: 15px;
         right: 15px;
-        bottom: 100px;
+        bottom: 150px;
     }
     height: 100%;
     display: grid;
